force-app/main/default/objects/animalos__Area__c/fields/animalos__Parent_Area__c.field-meta.xml
<CustomField>
    <fullName>animalos__Parent_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Area</label>
    <referenceTo>animalos__Area__c</referenceTo>
    <relationshipLabel>Areas</relationshipLabel>
    <relationshipName>Child_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>