force-app/main/default/objects/animalos__Area__c/listViews/animalos__All_Areas.listView-meta.xml
<ListView>
    <fullName>animalos__All_Areas</fullName>
    <columns>NAME</columns>
    <columns>animalos__Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Areas</label>
</ListView>