force-app/main/default/objects/animalos__Area__c/listViews/Child_Areas.listView-meta.xml
<ListView>
    <fullName>Child_Areas</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>animalos__Parent_Area__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Child Areas</label>
</ListView>