force-app/main/default/objects/animalos__Area__c/listViews/Parent_Areas.listView-meta.xml
<ListView>
    <fullName>Parent_Areas</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>animalos__Parent_Area__c</field>
        <operation>equals</operation>
    </filters>
    <label>Parent Areas</label>
</ListView>